--- a/app/src/main/res/layout/view_customdetail.xml
+++ b/app/src/main/res/layout/view_customdetail.xml
@@ -4,68 +4,74 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_20dp"
-        android:background="@color/white" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_orderNum"
             style="@style/order_detail_projectTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_weight="1"
             android:text="订单编号："
-            android:textColor="@color/blackgroundmain"
             android:textSize="@dimen/txtsize_35sp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:background="@color/zhy_line_3" />
 
         <TextView
             android:id="@+id/tv_orderTime"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_weight="1"
             android:text="订单日期：" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_height="@dimen/dimen_16dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/dimen_80dp"
+        android:background="@color/white">
 
         <com.shian.shianlife.common.view.ColorsTextView
             android:id="@+id/tv_visitNum"
             style="@style/order_detail_projectTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_centerVertical="true"
-            android:text="客户编号："
-            android:textColor="@color/blackgroundmain" />
+            android:text="客户编号：" />
 
 
     </RelativeLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_khName"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="客户姓名：" />
 
 
@@ -78,7 +84,7 @@
                 android:id="@+id/tv_khTel"
                 style="@style/order_detail_productTextStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dimen_80dp"
                 android:layout_weight="1"
                 android:text="客户电话：" />
 
@@ -86,74 +92,62 @@
                 android:id="@+id/tv_customerdetail"
                 style="@style/orderlist_item_btn_textStyle"
                 android:layout_width="@dimen/dimen_160dp"
-                android:layout_height="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_55dp"
                 android:layout_gravity="right|center"
-
                 android:layout_margin="@dimen/dimen_10dp"
-                android:background="@drawable/customdetail_detail"
-                android:text="客户详情" />
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:background="@drawable/zhy_button_state_2"
+                android:text="客户详情"
+                android:textColor="@color/zhy_text_color_1" />
         </LinearLayout>
 
     </LinearLayout>
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="@dimen/dimen_5dp"
-        android:layout_marginRight="@dimen/dimen_5dp"
-        android:background="@color/gray_common" />
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/gray_common" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_agentmanName"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="经办人：" />
+            android:layout_height="@dimen/dimen_80dp"
+            android:text="经办人姓名：" />
 
 
         <TextView
             android:id="@+id/tv_agentmanlinkInfo"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="经办人电话：" />
     </LinearLayout>
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_contractNo"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="合同编号：" />
 
 
@@ -161,27 +155,27 @@
             android:id="@+id/tv_contractAmount"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="合同金额：" />
     </LinearLayout>
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_usageName"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="逝者姓名：" />
 
 
@@ -189,8 +183,7 @@
             android:id="@+id/tv_funeralTime"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="出殡时间：" />
 
 
@@ -198,36 +191,35 @@
             android:id="@+id/tv_startTime"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="服务开始时间：" />
 
         <TextView
             android:id="@+id/tv_endTime"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="服务结束时间：" />
     </LinearLayout>
 
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_talkerName"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="白事顾问：" />
 
 
@@ -235,16 +227,14 @@
             android:id="@+id/tv_talkerTel"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="白事顾问电话：" />
 
         <TextView
             android:id="@+id/tv_performerName"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="治丧指导：" />
 
 
@@ -252,58 +242,57 @@
             android:id="@+id/tv_performerTel"
             style="@style/order_detail_productTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_80dp"
             android:text="治丧指导电话：" />
     </LinearLayout>
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@color/white"
+        android:orientation="vertical">
 
 
+        <TextView
+            android:id="@+id/tv_agentmanAddress"
+            style="@style/order_detail_productTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:text="经办人地址：" />
+
+
+        <TextView
+            android:id="@+id/tv_funeralAddress"
+            style="@style/order_detail_productTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:text="治丧地址：" />
+
+
+        <TextView
+            android:id="@+id/tv_dieAddress"
+            style="@style/order_detail_productTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:text="去世地址：" />
+
+
+        <TextView
+            android:id="@+id/tv_funeralParlorAddress"
+            style="@style/order_detail_productTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:text="殡仪馆地址：" />
     </LinearLayout>
 
-
     <TextView
-        android:id="@+id/tv_agentmanAddress"
-        style="@style/order_detail_productTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="经办人地址：" />
+        android:layout_height="@dimen/dimen_24dp" />
 
-
-    <TextView
-        android:id="@+id/tv_funeralAddress"
-        style="@style/order_detail_productTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="治丧地址：" />
-
-
-    <TextView
-        android:id="@+id/tv_dieAddress"
-        style="@style/order_detail_productTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="去世地址：" />
-
-
-    <TextView
-        android:id="@+id/tv_funeralParlorAddress"
-        style="@style/order_detail_productTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="殡仪馆地址：" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_20dp"
-        android:background="@color/white" />
 </LinearLayout>
