--- a/app/src/main/res/layout/view_item_overserver.xml
+++ b/app/src/main/res/layout/view_item_overserver.xml
@@ -2,237 +2,266 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/dimen_25dp"
-    android:paddingRight="@dimen/dimen_25dp">
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/rl_qt0"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dimen_30dp"
-        android:paddingTop="@dimen/dimen_30dp">
-
-        <TextView
-            android:id="@+id/tv_qt00"
-            style="@style/orderlist_item_title_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="订单编号:"
-            android:textColor="@color/blackgroundmain" />
-
-        <ImageView
-            android:id="@+id/iv_qt02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_qt_phone"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_qt01"
-            style="@style/orderlist_item_content_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dimen_5dp"
-            android:layout_toLeftOf="@id/iv_qt02"
-            android:layout_toRightOf="@id/tv_qt00"
-            android:text="xxx"
-            android:textColor="@color/blackgroundmain" />
-
-        <TextView
-            android:id="@+id/tv_qt02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dimen_15dp"
-            android:text="xxx"
-            android:textColor="@color/blackgroundmain"
-            android:textSize="@dimen/text_size_date_list" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@drawable/user_down_line" />
-
-    <RelativeLayout
-        android:id="@+id/rl_qt00"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dimen_30dp"
-        android:paddingTop="@dimen/dimen_30dp">
-
-        <TextView
-            android:id="@+id/tv_qt000"
-            style="@style/orderlist_item_title_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="客户姓名:" />
-
-        <ImageView
-            android:id="@+id/iv_qt020"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_qt_phone" />
-
-        <TextView
-            android:id="@+id/tv_qt010"
-            style="@style/orderlist_item_content_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dimen_5dp"
-            android:layout_toLeftOf="@id/iv_qt020"
-            android:layout_toRightOf="@id/tv_qt000"
-            android:text="xxx" />
-
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_qt1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dimen_30dp"
-        android:paddingTop="@dimen/dimen_30dp">
-
-        <TextView
-            android:id="@+id/tv_qt10"
-            style="@style/orderlist_item_title_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="治丧地址:" />
-
-        <ImageView
-            android:id="@+id/iv_qt12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_qt_phone"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_qt11"
-            style="@style/orderlist_item_content_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dimen_15dp"
-            android:layout_toLeftOf="@id/iv_qt12"
-            android:layout_toRightOf="@id/tv_qt10"
-            android:text="2016-03-25" />
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_qt2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dimen_30dp"
-        android:paddingTop="@dimen/dimen_30dp">
-
-        <TextView
-            android:id="@+id/tv_qt20"
-            style="@style/orderlist_item_title_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="服务时间：" />
-
-        <ImageView
-            android:id="@+id/iv_qt22"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_qt_phone"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_qt21"
-            style="@style/orderlist_item_content_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dimen_15dp"
-            android:layout_toLeftOf="@id/iv_qt22"
-            android:layout_toRightOf="@id/tv_qt20"
-            android:text="四川省成都市青羊区大石西路256号" />
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_qt3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dimen_30dp"
-        android:paddingTop="@dimen/dimen_30dp">
-
-        <TextView
-            android:id="@+id/tv_qt30"
-            style="@style/orderlist_item_title_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="服务满意度：" />
-
-        <ImageView
-            android:id="@+id/iv_qt32"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_qt_phone"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_qt31"
-            style="@style/orderlist_item_content_textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dimen_15dp"
-            android:layout_toLeftOf="@id/iv_qt32"
-            android:layout_toRightOf="@id/tv_qt30"
-            android:text="备注信息" />
-    </RelativeLayout>
+        android:layout_height="@dimen/dimen_16dp"
+        android:background="@color/zhy_text_color_3" />
 
     <LinearLayout
-        android:id="@+id/ll_over_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="0dp"
-        android:paddingTop="@dimen/dimen_25dp">
+        android:background="@drawable/zhy_button_state_item_white"
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/fl_detail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+        <RelativeLayout
+            android:id="@+id/rl_qt0"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp">
 
             <TextView
-                style="@style/orderlist_item_btn_textStyle"
-                android:layout_width="@dimen/dimen_250dp"
-                android:layout_height="@dimen/dimen_60dp"
-                android:text="订单详情" />
-        </FrameLayout>
+                android:id="@+id/tv_qt00"
+                style="@style/orderlist_item_title_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="订单编号:"
+                android:textColor="@color/blackgroundmain" />
+
+            <ImageView
+                android:id="@+id/iv_qt02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qt_phone"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_qt01"
+                style="@style/orderlist_item_content_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dimen_5dp"
+                android:layout_toLeftOf="@id/iv_qt02"
+                android:layout_toRightOf="@id/tv_qt00"
+                android:text="xxx"
+                android:textColor="@color/blackgroundmain" />
+
+            <TextView
+                android:id="@+id/tv_qt02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:text="xxx"
+                android:textColor="@color/blackgroundmain"
+                android:textSize="@dimen/dimen_24dp" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_2dp"
+            android:background="@color/zhy_text_color_3" />
+
+        <RelativeLayout
+            android:id="@+id/rl_qt00"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp">
+
+            <TextView
+                android:id="@+id/tv_qt000"
+                style="@style/orderlist_item_title_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="客户姓名:" />
+
+            <ImageView
+                android:id="@+id/iv_qt020"
+                android:layout_width="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_40dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qt_phone" />
+
+            <TextView
+                android:id="@+id/tv_qt010"
+                style="@style/orderlist_item_content_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dimen_5dp"
+                android:layout_toLeftOf="@id/iv_qt020"
+                android:layout_toRightOf="@id/tv_qt000"
+                android:text="xxx" />
+
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_text_color_3" />
+
+        <RelativeLayout
+            android:id="@+id/rl_qt1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp">
+
+            <TextView
+                android:id="@+id/tv_qt10"
+                style="@style/orderlist_item_title_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="治丧地址:" />
+
+            <ImageView
+                android:id="@+id/iv_qt12"
+                android:layout_width="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_40dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qt_phone"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_qt11"
+                style="@style/orderlist_item_content_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_toLeftOf="@id/iv_qt12"
+                android:layout_toRightOf="@id/tv_qt10"
+                android:text="2016-03-25" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_text_color_3" />
+
+        <RelativeLayout
+            android:id="@+id/rl_qt2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp">
+
+            <TextView
+                android:id="@+id/tv_qt20"
+                style="@style/orderlist_item_title_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="服务时间：" />
+
+            <ImageView
+                android:id="@+id/iv_qt22"
+                android:layout_width="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_40dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qt_phone"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_qt21"
+                style="@style/orderlist_item_content_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_toLeftOf="@id/iv_qt22"
+                android:layout_toRightOf="@id/tv_qt20"
+                android:text="四川省成都市青羊区大石西路256号" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_text_color_3" />
+
+        <RelativeLayout
+            android:id="@+id/rl_qt3"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp">
+
+            <TextView
+                android:id="@+id/tv_qt30"
+                style="@style/orderlist_item_title_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="服务满意度：" />
+
+            <ImageView
+                android:id="@+id/iv_qt32"
+                android:layout_width="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_40dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qt_phone"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_qt31"
+                style="@style/orderlist_item_content_textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_toLeftOf="@id/iv_qt32"
+                android:layout_toRightOf="@id/tv_qt30"
+                android:text="备注信息" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_text_color_3" />
+
+        <LinearLayout
+            android:id="@+id/ll_over_detail"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_120dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+            <FrameLayout
+                android:id="@+id/fl_detail"
+                android:layout_width="@dimen/dimen_133dp"
+                android:layout_height="@dimen/dimen_66dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/dimen_14dp"
+                android:layout_marginRight="@dimen/dimen_14dp">
+
+                <TextView
+                    style="@style/orderlist_item_btn_textStyle"
+                    android:layout_width="@dimen/dimen_133dp"
+                    android:layout_height="@dimen/dimen_66dp"
+                    android:background="@drawable/zhy_button_state_5"
+                    android:text="订单详情"
+                    android:textColor="@color/white" />
+            </FrameLayout>
+        </LinearLayout>
+
+
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/line" />
+
 </LinearLayout>
