--- a/app/src/main/res/layout/view_order_common.xml
+++ b/app/src/main/res/layout/view_order_common.xml
@@ -2,12 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@color/zhy_text_color_3"
+    android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sryt_swipe_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/dimen_16dp"
+        android:layout_marginRight="@dimen/dimen_16dp"
+        android:scrollbars="none">
 
         <ListView
             android:id="@+id/lv_swipe_listview"
@@ -17,7 +21,8 @@
             android:divider="@null"
             android:dividerHeight="0dp"
             android:fadingEdge="none"
-            android:scrollbarStyle="outsideOverlay" />
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="none" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
