--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -3,20 +3,20 @@
 
     <style name="orderlist_item_title_textStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">#696969</item>
-        <item name="android:textSize">@dimen/txtsize_24sp</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:minEms">6</item>
     </style>
 
     <style name="orderlist_item_content_textStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/zhy_text_color_9</item>
-        <item name="android:textSize">@dimen/txtsize_24sp</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
     </style>
 
     <style name="orderlist_item_btn_textStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">#7b5237</item>
-         <item name="android:textSize">@dimen/dimen_24dp</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/bg_orderlist_item_btn</item>
         <item name="android:layout_gravity">center</item>
@@ -52,28 +52,26 @@
     </style>
 
     <style name="order_detail_projectTextStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#000000</item>
-        <item name="android:textSize">@dimen/txtsize_35sp</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_32dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_32dp</item>
+        <item name="android:textColor">@color/zhy_text_color_1</item>
+        <item name="android:textSize">@dimen/dimen_32dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:paddingTop">@dimen/dimen_20dp</item>
-        <item name="android:paddingBottom">@dimen/dimen_10dp</item>
-        <item name="android:paddingLeft">@dimen/dimen_10dp</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="order_detail_ctgTextStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#696969</item>
         <item name="android:textSize">@dimen/txtsize_26sp</item>
-        <item name="android:paddingTop">@dimen/dimen_15dp</item>
-        <item name="android:paddingBottom">@dimen/dimen_15dp</item>
-        <item name="android:paddingLeft">@dimen/dimen_15dp</item>
-        <item name="android:paddingRight">@dimen/dimen_15dp</item>
     </style>
 
     <style name="order_detail_productTextStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#666666</item>
-        <item name="android:textSize">@dimen/txtsize_27sp</item>
-        <item name="android:padding">@dimen/dimen_20dp</item>
+        <item name="android:textColor">#696969</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_32dp</item>
+
     </style>
 
     <style name="order_detail_productTextStyle1" parent="@android:style/Widget.TextView">
